--- a/templates/tracker/landing_page.html
+++ b/templates/tracker/landing_page.html
@@ -393,7 +393,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="service-item">
-                        <img src="https://images.unsplash.com/photo-1605146768851-4030223cc2b2?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+                        <img src="https://picsum.photos/seed/computer-services/400/300.jpg" 
                              alt="Computer Services" class="service-image">
                         <h4 class="service-title" data-en="Computer Services" data-sw="Huduma za Kompyuta">Computer Services</h4>
                         <p class="text-muted" data-en="Typing, printing, scanning, and computer-related services" data-sw="Uandishi, uchapishaji, uchambuzi, na huduma zinazohusiana na kompyuta">
