--- a/static/custom.css
+++ b/static/custom.css
@@ -1,5 +1,16 @@
 /* Custom styles for Stationery Tracker */
 
+/* Ensure success messages are green */
+.alert-success {
+    color: #155724 !important;
+    background-color: #d4edda !important;
+    border-color: #c3e6cb !important;
+}
+
+.alert-success .alert-heading {
+    color: #155724 !important;
+}
+
 /* Additional customizations can be added here */
 .sidebar .nav-link.active {
     background-color: #3498db !important;
